[gd_scene load_steps=3 format=3 uid="uid://dmtwbpug3ib6m"]

[ext_resource type="Script" path="res://scripts/tp.gd" id="1_2chub"]
[ext_resource type="FontFile" uid="uid://dw48qbo37lh83" path="res://fonts/Mystery Font.ttf" id="2_ltsnx"]

[node name="tp" type="Area3D"]
script = ExtResource("1_2chub")

[node name="Button" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = 180.0
offset_right = 182.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_ltsnx")
theme_override_font_sizes/font_size = 56
text = "ENTER"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
